0026625: Possible wrong use of vtkSmartPointer<T> in IVtkVTK_ShapeData.cxx

Use vtkSmartPointer<XXX>::New() instead of XXX::New() when initializing fields of vtkSmartPointer<XXX> types.