src/IVtkVTK/IVtkVTK_ShapeData.cxx
@@ -33,17 +33,17 @@ const char* const IVtkVTK_ShapeData::ARRNAME_MESH_TYPES   = "MESH_TYPES";
 // Purpose  : 
 //================================================================
 IVtkVTK_ShapeData::IVtkVTK_ShapeData()
- : myPolyData( vtkPolyData::New() )
 {
+  myPolyData = vtkSmartPointer<vtkPolyData>::New();
   myPolyData->Allocate();
   myPolyData->SetPoints (vtkPoints::New());
 
-  mySubShapeIDs = vtkIdTypeArray::New();
+  mySubShapeIDs = vtkSmartPointer<vtkIdTypeArray>::New();
   mySubShapeIDs->SetName (IVtkVTK_ShapeData::ARRNAME_SUBSHAPE_IDS);
   mySubShapeIDs->SetNumberOfComponents (1);
   myPolyData->GetCellData()->AddArray (mySubShapeIDs);
 
-  myMeshTypes = vtkIdTypeArray::New();
+  myMeshTypes = vtkSmartPointer<vtkIdTypeArray>::New();
   myMeshTypes->SetName (IVtkVTK_ShapeData::ARRNAME_MESH_TYPES);
   myMeshTypes->SetNumberOfComponents (1);
   myPolyData->GetCellData()->AddArray (myMeshTypes);
